--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.16.4",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.7.5",
